--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -8,6 +8,7 @@
         type="text"
         formControlName="userName"
         class="form-control"
+        placeholder="Enter User Name"
         [ngClass]="{ 'is-invalid': submitted && f.userName.errors }"
       />
       <div *ngIf="submitted && f.userName.errors" class="invalid-feedback">
@@ -18,6 +19,7 @@
         type="text"
         formControlName="email"
         class="form-control"
+        placeholder="Enter Email"
         [ngClass]="{ 'is-invalid': submitted && f.email.errors }"
       />
       <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
@@ -31,6 +33,7 @@
         type="password"
         formControlName="password"
         class="form-control"
+        placeholder="Enter password"
         [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
       />
       <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
@@ -49,6 +52,7 @@
         type="password"
         formControlName="confirmPassword"
         class="form-control"
+        placeholder="Enter Confirm Password"
         [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }"
       />
       <div
